refactor: 전체조회 코드 간결하게 수정